@@ -1,0 +1,6 @@
+#ifndef RESOURCES_H
+#define RESOURCES_H
+
+#define ID_OOICON 101
+
+#endif
